fix: fix github logo size on mobile

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -212,8 +212,6 @@ h1 {
     position: absolute;
     left: 1325px;
     top: 939px;
-    width: 35px;
-    height: 35px;
 }
 
 /*  GO FULL WIDTH AT LESS THAN 480 PIXELS */
